<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
            android:id="@+id/customDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_theme" />
    
    <RadioGroup 
            android:id="@+id/customDialogRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
        <RadioButton
                android:id="@+id/customDialogRadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_1" />
        
        <RadioButton
                android:id="@+id/customDialogRadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_2" />
        
        <RadioButton
                android:id="@+id/customDialogRadioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_3" />
        
        <RadioButton
                android:id="@+id/customDialogRadioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_4" />
        
    </RadioGroup>
    
</LinearLayout>